ver 0.4.5
- Supported ShadowMapTexture2D
- Added filter options (Possible to use bicubic interpolation for mip generation)
- Fixed an error when loading non-zero values for FObjectExport.TemplateIndex
- Updated GUI to v0.2.2
- GUI can save output path for each mode
- Improved error massages for unsupported dds files

ver 0.4.4
- Supported UE4.0 ~ 4.9.
- Added "Skip non-texture assets" option.
- Fixed an error when loading assets that have multiple textures.
- Improved check mode (removed uneccessary versions from the check list)
- Removed parse errors for unsupported pixel formats
- Refined codes

ver 0.4.3
- Supported UE4.10 ~ 4.12
- Supported assets that have multiple texture objects
- Supported LightMapTexture2D
- Added a function to update PackageSource (use "MOD " for PackageSource)
- Updated texconv

ver 0.4.2
- Supported UE5.1
- Supported assets that have multiple texture objects (only for export mode)
- Fixed an error when assets have non-ascii characters.
- Fixed a bug that it won't update file size when updating name map.
- Refined codes

ver 0.4.1
- Supported more pixel formats
- Supported dds files that have no fourCC
- Added "force_uncompressed" option to inject mode

ver 0.4.0 (Introduced Texconv-Custom-DLL)
- Updated GUI (v0.1.2 to v0.2.1)
- Introduced tempfile for temporary files
- Introduced custom build for texconv (Texconv-Custom-DLL)
- Supported cubemaps
- Improved DDS handling

ver 0.3.3
- Supported UE5.0 assets
- Supported unversioned header
- Supported PF_ASTC_4X4

ver 0.3.2-hotfix
- Fixed a bug check mode won't work if the imported size is not the same as the actual size.


ver 0.3.2
- Added support for Borderlands3
- Removed legacy method (2-step injection with batch files)
- Improved folder method
- Minor updates for GUI

ver 0.3.1
- Added support for UE4.13, 4.14
- Fixed a bug check mode is not working
- Fixed an error when extracting uncompressed HDR textures (FloatRGBA)
- Minor updates for GUI

ver 0.3.0 (Introduced Texconv)